fonts were added, randomizing the time to be displayed, ellipsis, created a new README file for the project and this is the end of the project

--- a/index.html
+++ b/index.html
@@ -22,15 +22,15 @@
         <img src="./images/image-jeremy.png" class="image" alt="photo.jpg">
 
         <div class="details">
-          <p class="intro-text">Report for</p>
-          <h3 class="name">Jeremy Robson</h3>
+          <p class="intro-text reg pale">Report for</p>
+          <h2 class="name light bright">Jeremy Robson</h2>
         </div>
       </div>
 
       <div class="period">
-        <p class="time" data-id="d">Daily</p>
-        <p class="time active" data-id="w">Weekly</p>
-        <p class="time" data-id="m">Monthly</p>
+        <p class="time reg" data-id="d">Daily</p>
+        <p class="time reg active" data-id="w">Weekly</p>
+        <p class="time reg" data-id="m">Monthly</p>
       </div>
 
     </div>
@@ -40,7 +40,7 @@
   </div>
 
   <div class="attribution">
-    <p class="linkage">
+    <p class="linkage reg">
       Challenge by <a href="https://www.frontendmentor.io?ref=challenge" target="_blank">Frontend Mentor</a>. 
       Coded by <a href="#"><strong>Dee_Maria</strong></a>.
     </p>
